<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    
    <string name="app_name">QuickWindow</string>
    <string name="menu_settings">Settings</string>
    
    <string name="alarm_title">Alarm</string>
    <string name="alarm_time">time</string>
    
    <string name="call_name">name</string>
    <string name="call_num">num</string>
    <string name="call_operator">operator</string>
    <string name="call_status">Incoming call</string>
    
    <!-- Time format strings for fall-back clock widget -->
    <string name="keyguard_widget_12_hours_format" translatable="false">h&#58;mm</string>
    <!-- Time format strings for fall-back clock widget -->
    <string name="keyguard_widget_24_hours_format" translatable="false">kk&#58;mm</string>
    
    <!-- format strings for clocks -->
    <string name="clock_24_hours_format" translatable="false">kk&#58;mm</string>
    <!-- Font size for AM/PM should match bottom_text_size -->
    <string name="main_clock_12_hours_format" translatable="false">h&#58;mm&#8202;<b><font size="16" face="sans-serif-condensed">a</font></b></string>
    <string name="keyguard_accessibility_transport_prev_description">Previous track button</string>
    <string name="keyguard_accessibility_transport_next_description">Next track button</string>
    <string name="keyguard_accessibility_transport_pause_description">Pause button</string>
    <string name="keyguard_accessibility_transport_play_description">Play button</string>
    <string name="keyguard_accessibility_transport_stop_description">Stop button</string>
    <string name="keyguard_accessibility_transport_thumbs_up_description">Thumbs up</string>
    <string name="keyguard_accessibility_transport_thumbs_down_description">Thumbs down</string>
    <string name="keyguard_accessibility_transport_heart_description">Heart</string>
    <string name="keyguard_transport_prev_description">Previous track button</string>
    <string name="keyguard_transport_next_description">Next track button</string>
    <string name="keyguard_transport_pause_description">Pause button</string>
    <string name="keyguard_transport_play_description">Play button</string>
    <string name="keyguard_transport_stop_description">Stop button</string>
    <string name="morning">AM</string>
    <string name="afternoon">PM</string>
    <string name="yesterday">Yesterday</string>
    <string name="sms">Message</string>
    <string name="call_log">Call Logs</string>
    <string name="music">Music</string>
    <string name="setting">Setting</string>
    <string name="no_call_log_tip">No call log</string>
    <string name="no_unread_message">No unread message</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">Aug</string>
    <string name="september">Sept</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day_of_month">Day</string>
    <string name="unknown">Unknown</string>
    <string name="user_profile">User Profile</string>
    <string name="clock_style">Clock Style</string>
    <string name="screen_timeout">Screen timeout</string>
    <string name="user_profile_general">General</string>
    <string name="user_profile_silent">Silent</string>
    <string name="user_profile_meeting">Meeting</string>
    <string name="user_profile_outdoor">Outdoor</string>
    <string name="seleted_backgroud">Backgroud</string>
    <string name="blue_backgroud">Blue</string>
    <string name="champagne_backgroud">champagne</string>
    <string name="white_backgroud">White</string>
    <string name="charging">Charging</string>
    <string name="call_via">Call via</string>
    <string name="sim_name_unkwon">unknow</string>
</resources>
